# yolov8_onnx_rust

./: Cargo.toml  index.html
src/: main.rs
