[package]
name = "onnx_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.6"
ndarray = "0.16.1"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.36"
rocket = "=0.5.0-rc.3"
ort = { version = "=2.0.0-rc.10", features = ["cuda", "tensorrt", "ndarray"] }
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt" ] }
dotenv = "0.15.0"